# Django-API-Rest-Framework

./: README.md  pyproject.toml
escola/: admin.py  models.py  serializer.py  urls.py  views.py
escola/migrations/: 0001_initial.py  0002_matricula.py
setup/: settings.py  urls.py
